Removed `EntityMixin` from the `tumbleweed` mixin package, and implemented its functionality into Tumbleweed itself.