@@ -141,7 +141,7 @@ public class Tumbleweed extends Mob implements EntityStepOnBlockInterface {
 	@Nullable
 	@Override
 	public SpawnGroupData finalizeSpawn(@NotNull ServerLevelAccessor level, @NotNull DifficultyInstance difficulty, @NotNull MobSpawnType reason, @Nullable SpawnGroupData spawnData) {
-		if (this.inventory.get(0).isEmpty() && reason == MobSpawnType.NATURAL) {
+		if (this.inventory.getFirst().isEmpty() && reason == MobSpawnType.NATURAL) {
 			int diff = difficulty.getDifficulty().getId();
 			if (this.random.nextInt(0, diff == 0 ? 32 : (27 / diff)) == 0) {
 				int tagSelector = this.random.nextInt(1, 6);
@@ -264,7 +264,9 @@ public class Tumbleweed extends Mob implements EntityStepOnBlockInterface {
 
 	private void checkActive(double brightness) {
 		Player entity = this.level().getNearestPlayer(this, -1D);
-		if (!this.requiresCustomPersistence() && ((brightness < 7 && (entity == null || entity.distanceTo(this) > INACTIVE_PLAYER_DISTANCE_FROM)) || this.isTouchingStoppingBlock || this.isTouchingStickingBlock || (this.wasTouchingWater && !(this.getBlockStateOn().getBlock() instanceof MesogleaBlock)))) {
+		if (!this.requiresCustomPersistence() && ((brightness < 7 && (entity == null || entity.distanceTo(this) > INACTIVE_PLAYER_DISTANCE_FROM))
+			|| this.isTouchingStoppingBlock || this.isTouchingStickingBlock ||
+			(this.wasTouchingWater && !(this.getBlockStateOn().getBlock() instanceof MesogleaBlock)))) {
 			++this.ticksSinceActive;
 			if (this.ticksSinceActive >= MAX_INACTIVE_TICKS) {
 				this.destroy(false);
@@ -411,6 +413,14 @@ public class Tumbleweed extends Mob implements EntityStepOnBlockInterface {
 	@Override
 	public boolean causeFallDamage(float fallDistance, float multiplier, @NotNull DamageSource source) {
 		return false;
+	}
+
+	@Override
+	public void remove(RemovalReason removalReason) {
+		if (removalReason == RemovalReason.DISCARDED) {
+			this.dropItem(false);
+		}
+		super.remove(removalReason);
 	}
 
 	@Override
